[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-rl-algorithms"
version = "0.1.0"
description = "PyTorch RL algorithms with modular backbone architectures"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "pydantic>=2.0.0",
    "tensorboardX>=2.6.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["algorithms*", "models*"]
